<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="exercise_record">운동 기록</string>
    <string name="record_exercise">운동 기록하기</string>
    <string name="edit_exercise">운동 기록 수정</string>
    <string name="exercise_detail">운동 기록 상세</string>
    <string name="exercise_record_title">제목 *</string>
    <string name="exercise_record_type">운동 종류</string>
    <string name="exercise_record_time">운동 시간 *</string>
    <string name="exercise_record_time_divider">:</string>
    <string name="exercise_record_location">장소</string>
    <string name="exercise_record_title_hint">제목을 입력해주세요.</string>
    <string name="exercise_record_type_select_hint">운동 종류를 선택해주세요.</string>
    <string name="exercise_record_type_direct">직접 입력</string>
    <string name="exercise_record_type_hint">운동 종류를 입력해주세요.</string>
    <string name="exercise_record_location_hint">운동장소를 입력해주세요.</string>
    <string name="exercise_record_desc">내용</string>
    <string name="exercise_record_add_image">사진 추가하기</string>
    <string name="exercise_record_delete_alert">운동 기록을 삭제하시겠습니까?</string>
    <string name="exercise_record_max_image">사진은 최대 5개까지 등록할 수 있습니다.</string>
    <string name="exercise_record_image_access">사진 접근 권한이 필요합니다.</string>
    <string name="exercise_record_time_error">종료 시간은 시작 시간보다 빠를 수 없습니다.</string>
    <string name="exercise_record_time_future_error">현재 시간까지만 선택할 수 있습니다.</string>
    <string name="exercise_record_delete">삭제하기</string>
    <string name="exercise_record_edit">수정하기</string>
    <string name="exercise_create_get_score">운동 기록하고 점수 얻기</string>
    <string name="exercise_empty">이 날짜에 등록된 기록이 없습니다</string>
    <string name="exercise_place_search">운동하는 장소 검색</string>
    <string name="search">검색</string>
    <string name="exercise_place_input">입력</string>
    <string name="empty_searched_place">검색 결과가 없습니다.</string>
    <string name="no_search_keyword">검색어를 입력해주세요.</string>
    <string name="error_cannot_find_address">주소를 가져오는데 실패했습니다.</string>
    <string name="error_failed_to_search_place">검색 중 오류가 발생했습니다.</string>
    <string name="error_cannot_find_current_location">현재 위치를 가져올 수 없습니다.</string>

    <!-- 점수 -->
    <string name="exercise_count_format">%d회</string>
    <string name="exercise_score_format">%d점</string>
    <string name="exercise_count_desc">이번 달 운동 횟수</string>
    <string name="exercise_score_desc">운동 점수</string>

    <string name="exercise_policy_title_point_range">점수 범위</string>
    <string name="exercise_policy_min_point_format">- 최소: %1$d점</string>
    <string name="exercise_policy_max_point_format">- 최대: %1$d점</string>

    <string name="exercise_policy_title_point_win">점수 획득</string>
    <string name="exercise_policy_signup_points_format">- 회원가입 시 기본으로 %1$d점이 부여됩니다.</string>
    <string name="exercise_policy_points_per_exercise_format">- 운동 기록 1회 당 %1$d점을 획득할 수 있습니다. (일 1회)</string>
    <string name="exercise_policy_record_validity_format">- 현재 시간으로부터 %1$d%2$s 안에 기록해야 점수를 획득할 수 있습니다.</string>

    <string name="exercise_policy_title_point_reduce">점수 차감</string>
    <string name="exercise_policy_penalty_format">- %1$d%2$s이상 운동 기록을 하지 않으면 %3$d%4$s마다 %5$d점이 차감됩니다.</string>

    <string name="unit_days">일</string>
    <string name="unit_hours">시간</string>

    <string name="exercise_record_complete_with_points">운동 기록하고 %d점 획득하기</string>
    <string name="exercise_record_complete">기록 완료</string>

    <string name="exercise_score_congratulation_title">축하해요!\n운동 점수를 %d점 획득했어요</string>

    <!-- 에러 -->
    <string name="image_error_oversized">파일 크기가 너무 큽니다. (최대 %s)</string>
    <string name="image_error_invalid_type">지원하지 않는 파일 형식입니다. (허용: %s)</string>
    <string name="image_error_file_read">파일 정보를 읽는 데 실패했습니다. 다른 파일을 선택해주세요.</string>
    <string name="unknown_error">알 수 없는 오류가 발생했습니다.</string>
    <string name="data_error">데이터를 불러오는데 실패했습니다.</string>

    <!-- 시간 관련 -->
    <string name="exercise_error_invalid_time">유효한 시간을 입력해주세요.</string>
    <string name="exercise_error_future_time">미래 시간은 선택할 수 없습니다.</string>
    <string name="exercise_error_start_time_future">시작 시간은 현재 시간 이후로 설정할 수 없습니다.</string>
    <string name="exercise_error_end_time_future">종료 시간은 현재 시간 이후로 설정할 수 없습니다.</string>

    <!-- 에러 및 알림 메시지 -->
    <string name="exercise_load_fail">기록을 불러오는데 실패했습니다</string>
    <string name="exercise_no_change">변경 사항이 없습니다</string>
    <string name="exercise_invalid_input">필수 항목을 입력해주세요.</string>
    <string name="exercise_create_fail">기록 생성에 실패했습니다</string>
    <string name="exercise_upload_fail">이미지 업로드에 실패했습니다</string>
    <string name="exercise_fetch_score_info_fail">점수 정보를 불러오는데 실패했습니다.</string>
    <string name="exercise_record_type_direct_input_warning">운동 종류를 입력해주세요.</string>

    <!-- 점수 안내 메시지 -->
    <string name="exercise_already_scored_today">이 날은 이미 점수를 획득했어요</string>
    <string name="exercise_upload_period_expired">점수를 획득할 수 있는 기간이 지났어요</string>
    <string name="exercise_max_score_reached">점수가 최대치에 도달했어요!</string>

    <!-- 스티커 -->
    <string name="sticker_total_time">TOTAL TIME</string>
    <string name="sticker_mascot_description">운다방 마스코트</string>
    <string name="sticker_type_description">운동 종류 아이콘</string>
    <string name="sticker_location_description">장소 아이콘</string>
    <string name="sticker_preview_description">스티커 미리보기</string>
    <string name="exercise_share">공유하기</string>
    <string name="share_to_instagram_story">인스타그램 스토리</string>
    <string name="share_to_instagram_feed">인스타그램 피드</string>
    <string name="share_to_others">다른 앱으로 공유</string>
    <string name="share">공유하기</string>
    <string name="cancel">취소</string>
    <string name="theme_dark">다크 테마</string>
    <string name="theme_light">라이트 테마</string>
    <string name="theme_minimal">미니멀 테마</string>
    <string name="share_edit_title">사진 편집</string>
    <string name="share_image_required">공유하려면 사진이 필요해요</string>
</resources>