<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preview_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/sticker_preview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_horizontal_margin"
            android:layout_marginTop="@dimen/base_horizontal_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sticker_preview_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottom_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/theme_buttons_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/theme_dark_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_theme_button_dark"
                android:contentDescription="@string/theme_dark" />

            <ImageView
                android:id="@+id/theme_light_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="36dp"
                android:background="@drawable/bg_theme_button_light"
                android:contentDescription="@string/theme_light" />

            <ImageView
                android:id="@+id/theme_minimal_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_theme_button_minimal"
                android:contentDescription="@string/theme_minimal" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                style="@style/content_bold"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/base_horizontal_margin"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:background="@null"
                android:text="@string/cancel"
                android:textColor="@color/white300" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/share_btn"
                style="@style/content_bold"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/base_horizontal_margin"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:background="@null"
                android:stateListAnimator="@null"
                android:text="@string/share"
                android:textColor="@color/white300" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
