<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/dialog_radius"
    tools:ignore="WebViewLayout">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_btn"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_gravity="start"
        android:background="@drawable/ic_arrow_back"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp" >
        <LinearLayout
            android:id="@+id/policy_content_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/content_bold"
                android:id="@+id/point_range_title_tv"
                android:text="@string/exercise_policy_title_point_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/point_range_desc_tv"
                style="@style/subtext_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/content_bold"
                android:id="@+id/point_win_title_tv"
                android:text="@string/exercise_policy_title_point_win"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/point_win_desc_tv"
                style="@style/subtext_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/content_bold"
                android:id="@+id/point_reduce_title_tv"
                android:text="@string/exercise_policy_title_point_reduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/point_reduce_desc_tv"
                style="@style/subtext_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
