<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sticker_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_sticker_dark"
    android:paddingBottom="30dp"
    android:clipChildren="false"
    android:clipToPadding="false">

    <!-- TOTAL TIME 라벨 -->
    <TextView
        android:id="@+id/sticker_total_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/base_horizontal_margin"
        android:fontFamily="@font/nanumsquareneo_cbd"
        android:text="@string/sticker_total_time"
        android:textColor="@color/gray200"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 시간 표시 (MM:SS 형식) -->
    <TextView
        android:id="@+id/sticker_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/rammetto_one_regular"
        android:textColor="@color/white300"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sticker_total_time_label"
        tools:text="01:20" />

    <!-- 마스코트 이미지 (오른쪽 상단) -->
    <ImageView
        android:id="@+id/sticker_mascot"
        android:layout_width="145.5dp"
        android:layout_height="90dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="-45dp"
        android:contentDescription="@string/sticker_mascot_description"
        android:rotation="-35"
        android:src="@drawable/ic_undabang_character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 운동 정보 (요일/종류/부위) -->
    <TextView
        android:id="@+id/sticker_exercise_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/nanumsquareneo_deb"
        android:minWidth="250dp"
        android:textColor="@color/white300"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sticker_time_value"
        tools:text="월요일" />

    <!-- 구분선 -->
    <View
        android:id="@+id/sticker_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        android:background="@color/gray100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sticker_exercise_info" />

    <!-- 운동 타입 아이콘 + 텍스트 -->
    <ImageView
        android:id="@+id/sticker_type_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/sticker_type_description"
        android:src="@drawable/ic_sticker_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sticker_divider" />

    <TextView
        android:id="@+id/sticker_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="@font/nanumsquareneo_cbd"
        android:textColor="@color/white300"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/sticker_type_icon"
        app:layout_constraintStart_toEndOf="@id/sticker_type_icon"
        app:layout_constraintTop_toTopOf="@id/sticker_type_icon"
        tools:text="헬스" />

    <!-- 장소 아이콘 + 텍스트 -->
    <ImageView
        android:id="@+id/sticker_location_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/sticker_location_description"
        android:src="@drawable/ic_sticker_location"
        app:layout_constraintStart_toStartOf="@id/sticker_type_icon"
        app:layout_constraintTop_toBottomOf="@id/sticker_type_icon" />

    <TextView
        android:id="@+id/sticker_location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="@font/nanumsquareneo_cbd"
        android:textColor="@color/white300"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/sticker_location_icon"
        app:layout_constraintStart_toEndOf="@id/sticker_location_icon"
        app:layout_constraintTop_toTopOf="@id/sticker_location_icon"
        tools:text="계룡 휘트니스 센터" />

</androidx.constraintlayout.widget.ConstraintLayout>
