<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white300">

    <LinearLayout
        android:id="@+id/search_toolbar_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height"
        android:background="@color/white300"
        android:gravity="center"
        android:paddingStart="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back"
            android:visibility="visible" />

        <EditText
            android:id="@+id/search_exercise_place_et"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:inputType="text"
            android:background="@drawable/bg_solid_corner"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="12dp"
            android:hint="@string/exercise_place_search"
            android:paddingHorizontal="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray200" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_btn"
            style="@style/content_bold"
            android:layout_width="62dp"
            android:layout_height="33dp"
            android:layout_marginEnd="@dimen/base_horizontal_margin"
            android:background="@drawable/bg_complete_btn"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@color/white300"
            app:layout_constraintBottom_toBottomOf="@+id/base_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/base_toolbar"
            app:layout_constraintTop_toTopOf="@+id/base_toolbar" />
    </LinearLayout>
    <com.kakao.vectormap.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/search_toolbar_ll"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
        android:id="@+id/center_marker_iv"
        android:src="@drawable/ic_exercise_place_marker"
        app:layout_constraintTop_toTopOf="@id/map_view"
        app:layout_constraintBottom_toTopOf="@id/place_address_cl"
        app:layout_constraintEnd_toEndOf="@id/map_view"
        app:layout_constraintStart_toStartOf="@id/map_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/black" />
    <LinearLayout
        android:id="@+id/place_address_cl"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_bottom_sheet_dialog"
        android:paddingHorizontal="@dimen/base_horizontal_margin">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/place_name_tv"
                android:textColor="@color/black"
                style="@style/medium_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/place_address_tv"
                android:visibility="gone"
                android:fontFamily="@font/pretendard_regular"
                android:textColor="@color/gray100"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/input_exercise_place_btn"
            style="@style/content_bold"
            android:layout_width="62dp"
            android:layout_height="33dp"
            android:background="@drawable/bg_complete_btn"
            android:gravity="center"
            android:text="@string/exercise_place_input"
            android:textColor="@color/white300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searched_place_cl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:background="@color/white300"
        app:layout_constraintTop_toBottomOf="@id/search_toolbar_ll"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searched_place_rv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <TextView
            android:id="@+id/searched_place_empty_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/content_regular"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/empty_searched_place"
            android:textColor="@color/gray200"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>